# homeobox

./: 404.html  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  testing_notebook.py
array_storage/: index.html
atlas/: index.html
batch_array/: index.html
benchmarks/: README.md  __init__.py  benchmark.py  benchmark_anndata_ops.py  benchmark_cell_filtering.py  benchmark_dataloaders_entropy.py  benchmark_dataloaders_external.py  benchmark_dataloaders_homeobox.py  benchmark_expression_queries.py  benchmark_gene_filtering.py  benchmark_group_sampler.py  benchmark_prefetcher.py  benchmark_read_ranges_vs_annbatch.py  benchmark_scdataset_multiprocessing.py  benchmark_scdataset_scaling.py  benchmark_utils.py  group_samplers.py  make_perturbation_synth.py  make_synth_dataset.py  perturb_feature_space.py  plot_dataloader_sweep.py  sweep_dataloaders.py  (+1 more)
docs/: dex.md  (+17 more)
homeobox_examples/: pyproject.toml
homeobox_examples/cellxgene_census_tiledb/: ingest.py  ingest_single_group.py  schema.py
homeobox_examples/multimodal_perturbation_atlas/: assemblies.py  atlas.py  ingestion.py  query.py  schema.py  schema.yaml
homeobox_examples/multimodal_perturbation_atlas/notebooks/: chromatin_fragments_demo.py  explore_perturbation_atlas.py  explore_perturbation_atlas_colab.py  explore_perturbation_atlas_v2.py
homeobox_examples/multimodal_perturbation_atlas/scripts/: ingest_GSE264667.py  ingest_cpg0016_images.py  ingest_cpg0021.py
homeobox_examples/scbasecount/: create_indices.py  download.py  finalize.py  ingest.py  pipeline.sh  schema.py
(+237 files in other folders)
