[project]
name = "homeobox-examples"
version = "0.1.0"
description = "Example ingestion scripts for homeobox"
requires-python = ">=3.12"
dependencies = [
    "homeobox",
]

[tool.uv.sources]
homeobox = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
